<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Contacts</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and with sprinkled candy</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="donuts_description">Donuts are glazed and with sprinkled candy</string>
    <string name="ice_cream_description">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="froyo_description">FroYo is premium self-serve frozen yogurt</string>
    <string name="name_label">Name</string>
    <string name="order_textView">Order</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="address_label">Address</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="phone_label">Phone</string>
    <string name="enter_your_phone_number">Enter your phone</string>
    <string name="email_label">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password_label">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="note_label">Note</string>
    <string name="enter_your_note">Enter your note</string>
    <string name="choose_a_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pickup">Pickup</string>
    <string name="image_of_shopping_cart">Image of shopping cart</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>


    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="action_contacts">Contacts</string>


    <string name="context_edit">You selected Edit.</string>
    <string name="context_share">You selected Share.</string>
    <string name="context_delete">You selected Delete.</string>


    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <string-array name="myItemsArray">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
    </string-array>

</resources>